--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "he": "^1.2.0",
     "json-server": "^0.17.3",
+    "normalizr": "^3.6.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
