--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "homepage": "https://safdarjamal.github.io/quiz-app/",
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.5.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "aws-amplify": "^5.0.24",
     "he": "^1.2.0",
     "json-server": "^0.17.3",
     "normalizr": "^3.6.2",
