--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^5.0.24",
+    "chart.js": "^3.9.1",
     "he": "^1.2.0",
     "json-server": "^0.17.3",
     "normalizr": "^3.6.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
@@ -67,12 +69,14 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@storybook/addon-actions": "^6.3.8",
     "@storybook/addon-essentials": "^6.3.8",
     "@storybook/addon-links": "^6.3.8",
     "@storybook/node-logger": "^6.3.8",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.8",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "react-error-overlay": "6.0.9"  
   }
 }
