--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ REACT_APP_JSON_SERVER_API=http://localhost:3001
 REACT_APP_AWS_DEV_API=https://fqlhzrzv3j.execute-api.us-east-1.amazonaws.com/dev
 AWS_USERPOOLID= "us-east-1_94LETHrU8"
 AWS_CLIENTID= "113366fbvvjibnkbgoedsj0kgs"
+REACT_APP_TINYMCE_API="5q6wsl46ds0gohafrdjagh6sufsk7h54wu1u2wg46kvqfq20"
