--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@tinymce/tinymce-react": "^4.3.0",
     "aws-amplify": "^5.0.24",
     "chart.js": "^3.9.1",
     "he": "^1.2.0",
@@ -77,6 +78,6 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.8",
     "gh-pages": "^3.1.0",
-    "react-error-overlay": "6.0.9"  
+    "react-error-overlay": "6.0.9"
   }
 }
