--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "sweetalert2": "^11.7.5"
+    "sweetalert2": "^11.7.5",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
