--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "normalizr": "^3.6.2",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
