--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@storybook/preset-create-react-app": "^7.0.18",
     "@storybook/react": "^7.0.18",
     "gh-pages": "^5.0.0",
-    "react-error-overlay": "6.0.11"
+    "react-error-overlay": "6.0.11",
+    "tailwindcss": "^3.3.2"
   }
 }
